--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !/tmp/.keep
 /public/assets/*
 /public/upload_images/*
+/config/database.yml
 
 # Ignore Byebug command history file.
 .byebug_history
